<resources>

    <string name="app_name">汽车江湖网</string>
    <string name="mssage">资讯</string>
    <string name="info_quit">是否要退出程序?</string>
    <string name="notWifi">没有在wifi状态下,是否开启无图模式?</string>
    <string name="info_load_failed">加载失败，请稍后重试</string>
    <string name="action_settings">设置</string>
    <string name="info_no_more_data">没有更多了</string>
    <string name="load_more">更多</string>
    <string name="loading">加载中</string>
    <string name="ptr_pull_to_refresh">下拉刷新</string>
    <string name="ptr_release_to_refresh">松开以刷新</string>
    <string name="ptr_refreshing">加载中#8230;#8230;#8230;</string>
    <string name="ptr_last_updated">上次刷新: %1$s</string>
    <string name="test">正在加載</string>
    <string name="refresh">刷新</string>
    <string name="comment">分享</string>
    <string name="choose_car">选车导购</string>
    <string name="praise">口碑</string>
    <string name="duibi">对比</string>
    <string name="activity_duration">200</string>

    <string-array name="tab_bottom_list">
        <item>资讯</item>
        <item>论坛</item>
        <item>找车</item>
        <item>降价</item>
        <item>更多</item>
    </string-array>

    <string name="newest">最新</string>
    <string name="news">新闻</string>
    <string name="evaluation">评测</string>
    <string name="shopper">导购</string>
    <string name="knowledge">知识</string>
    <string name="compair_car">车型对比</string>
    <string name="clear_data">清除缓存</string>
    <string name="yijianfankui">意见反馈</string>
    <string name="into_car">进入<u>手机江湖网</u>网页</string>
    <string name="no_picture">无图模式</string>
    <string name="sort_select">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">正在加载中\u2026</string>

    <string-array name="brandDetail_pic_typeSearch">
        <item>全部类型</item>
        <item>外观</item>
        <item>座椅</item>
        <item>中控</item>
        <item>其他</item>
    </string-array>

</resources>